1. Hotfix: push notifications token updates.